# rubiks-cube-scanner

./: .gitignore  Pipfile  README.md  pyproject.toml  run  scan.py  scancube  scancube.py
