[tool.poetry]
name = "rubiks-cube-scanner"
version = "0.1.0"
description = ""
authors = ["Thomas Bjerkan <t.bjerkan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.1"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
